load("@bzlmodrio-opencv//libraries/cpp/opencv:libraries.bzl", "opencv_shared_libraries")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_java//java:defs.bzl", "java_binary")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library", "wpilib_cc_shared_library", "wpilib_cc_static_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_library")
load("//shared/bazel/rules:packaging.bzl", "package_default_cc_project")

filegroup(
    name = "doxygen-files",
    srcs = glob([
        "src/main/native/include/**/*",
    ]),
    visibility = ["//visibility:public"],
)

wpilib_cc_library(
    name = "cameraserver",
    srcs = glob(["src/main/native/cpp/**"]),
    hdrs = glob(["src/main/native/include/**/*"]),
    includes = [
        "cpp",
        "src/main/native/include",
    ],
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
    deps = [
        "//cscore",
        "//ntcore",
    ],
)

wpilib_cc_shared_library(
    name = "shared/cameraserver",
    dynamic_deps = [
        "//cscore:shared/cscore",
        "//ntcore:shared/ntcore",
        "//wpiutil:shared/wpiutil",
    ] + opencv_shared_libraries,
    visibility = ["//visibility:public"],
    deps = [":cameraserver"],
)

wpilib_cc_static_library(
    name = "static/cameraserver",
    static_deps = [
        "//cscore:static/cscore",
        "//ntcore:static/ntcore",
    ],
    visibility = ["//visibility:public"],
    deps = [":cameraserver"],
)

wpilib_java_library(
    name = "cameraserver-java",
    srcs = glob(["src/main/java/**/*.java"]),
    maven_artifact_name = "cameraserver-java",
    maven_group_id = "edu.wpi.first.cameraserver",
    visibility = ["//visibility:public"],
    deps = [
        "//cscore:cscore-java",
        "//hal:hal-java",
        "//ntcore:ntcore-java",
        "//wpimath:wpimath-java",
        "//wpinet:wpinet-java",
        "//wpiutil:wpiutil-java",
        "@bzlmodrio-opencv//libraries/java/opencv",
    ],
)

cc_test(
    name = "cameraserver-cpp-test",
    size = "small",
    srcs = glob(["src/test/native/**"]),
    deps = [
        ":cameraserver",
        "//thirdparty/googletest",
    ],
)

cc_binary(
    name = "DevMain-Cpp",
    srcs = ["src/dev/native/cpp/main.cpp"],
    deps = [
        ":cameraserver",
    ],
)

java_binary(
    name = "DevMain-Java",
    srcs = ["src/dev/java/edu/wpi/first/cameraserver/DevMain.java"],
    main_class = "edu.wpi.first.cameraserver.DevMain",
    deps = [
    ],
)

package_default_cc_project(
    name = "cameraserver",
    maven_artifact_name = "cameraserver-cpp",
    maven_group_id = "edu.wpi.first.cameraserver",
)
